MDL-7861 xhtml strict fixes - added langmenu class - fixed CSS alignment

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -439,6 +439,10 @@ form#adminsettings div.htmlarea {
   border-style:solid;
 }
 
+.navbar .langmenu {
+  text-align:right;
+}
+
 table.navbar {
   width: 100%;
 }
